# hotplate

./: .codedocs  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  hotplateConfig.cmake.in
cmake/: HotplateUtils.cmake  toolchain_x86_linux_on_x64_linux.cmake
docs/: Doxyfile  conf.py  index.rst  installing-dependencies.dox  mainpage.dox
include/hotplate/: hotplate.h
scripts/: appveyor_before_build.bat  appveyor_test_script.bat  configure_travis.sh  travis_after_success.sh  travis_before_script.sh
src/: CMakeLists.txt
src/build_info/: CMakeLists.txt  build_info.h.in
src/build_info/include/hotplate/: build_info.in.h
src/hotplate_app/: CMakeLists.txt  main.cpp
src/hotplate_boost_test/: CMakeLists.txt  build_info_boost_test.cpp  hotplate_boost_test.cpp  main.cpp  substance_boost_test.cpp
src/hotplate_lib/: CMakeLists.txt  hotplate.cpp
src/hotplate_static/: CMakeLists.txt  hotplate.cpp
src/hotplate_static/include/hotplate/: hotplate.h
